@@ -1,10 +1,11 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Parallel-Forker
-version:      1.201
+version:      1.202
 version_from: Forker.pm
 installdirs:  site
 requires:
+    Proc::ProcessTable:            0.4
     Time::HiRes:                   0
 
 distribution_type: module
