@@ -1,4 +1,4 @@
-# $Id: Makefile.PL 17052 2006-03-30 15:30:47Z wsnyder $
+# $Id: Makefile.PL 17394 2006-04-05 13:49:26Z wsnyder $
 # DESCRIPTION: Perl ExtUtils: Type 'perl Makefile.PL' to create a Makefile for this package
 #
 # Copyright 2003-2006 by Wilson Snyder.  This program is free software;
@@ -46,6 +46,7 @@ WriteMakefile(
 	      AUTHOR	=> 'Wilson Snyder <wsnyder@wsnyder.org>',
 	      ABSTRACT  => 'Parallel job forking and management, with expression based control',
 	      PREREQ_PM => {'Time::HiRes' => 0,
+			    'Proc::ProcessTable' => 0.40,
 			},
 	      'dist'    => {COMPRESS => 'gzip -9f',
 			    SUFFIX   => '.gz', 
